--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     </div>
 
     <footer class="footer">
-        <h1 class="copyright">&copy Eileen Thompson</h1>
+        <h1 class="copyright">&copy Eileen Thomson</h1>
     </footer>
 
     <script src="app.js"></script>
