--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Eileen Thompson Art</title>
+    <title>Eileen Thomson Art</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header id="home">
         <span class="menu-icon" onclick="toggleNav()">&#9776;</span>
-        <h1>Eileen Thompson Art</h1>
+        <h1>Eileen Thomson Art</h1>
         <div class="background-toggles">
             <div class="background-1" onclick='changeBackground("1")'></div>
             <div class="background-2" onclick='changeBackground("2")'></div>
@@ -61,13 +61,11 @@
             <a href="https://morphicfield.thrivecart.com/painting-1/" target="_blank" class="button-link">Buy now</a>
         </div>
     </div>
-    
     <div id="contact" class="social-media">
         <a href="https://github.com/tomek-m-coder/" target="_blank" class="hvr-sink"><i class="fab fa-github">&nbsp; <p>GitHub</p></i></a>&nbsp;&nbsp;&nbsp;&nbsp;
         <a href="mailto:eileenthomson@gmail.com" class="hvr-sink"><i class="fas fa-at">&nbsp; <p>E-mail</p></i></a>&nbsp;&nbsp;&nbsp;&nbsp;
         <a href="tel:000-000-000" class="hvr-sink"><i class="fas fa-mobile-alt">&nbsp; <p>Phone</p></i></a>
     </div>
-    
     <footer class="footer">
         <h1 class="copyright">&copy Eileen Thomson | 2024</h1>
     </footer>
