--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Eileen Thomson Art</title>
     <link rel="stylesheet" href="style.css">
+    <!-- Link do Font Awesome -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body>
     <header id="home">
@@ -33,7 +35,7 @@
         </div>
         <div class="text-div">
             <h2>Painting-1</h2>
-            <p>Text</p>
+            <p>Painting specification and price if you want</p>
             <a href="https://morphicfield.thrivecart.com/painting-1/" target="_blank" class="button-link">Buy now</a>
         </div>
     </div>
@@ -45,7 +47,7 @@
         </div>
         <div class="text-div">
             <h2>Painting-2</h2>
-            <p>Text</p>
+            <p>Painting specification and price if you want</p>
             <a href="https://morphicfield.thrivecart.com/painting-1/" target="_blank" class="button-link">Buy now</a>
         </div>
     </div>
@@ -57,14 +59,15 @@
         </div>
         <div class="text-div">
             <h2>Painting-3</h2>
-            <p>Text</p>
+            <p>Painting specification and price if you want</p>
             <a href="https://morphicfield.thrivecart.com/painting-1/" target="_blank" class="button-link">Buy now</a>
         </div>
     </div>
     <div id="contact" class="social-media">
-        <a href="https://github.com/tomek-m-coder/" target="_blank" class="hvr-sink"><i class="fab fa-github">&nbsp; <p>GitHub</p></i></a>&nbsp;&nbsp;&nbsp;&nbsp;
-        <a href="mailto:eileenthomson@gmail.com" class="hvr-sink"><i class="fas fa-at">&nbsp; <p>E-mail</p></i></a>&nbsp;&nbsp;&nbsp;&nbsp;
-        <a href="tel:000-000-000" class="hvr-sink"><i class="fas fa-mobile-alt">&nbsp; <p>Phone</p></i></a>
+        <a href="https://www.facebook.com/eileen.thomson.796" target="_blank" class="icon-link"><i class="fab fa-facebook-f"></i></a>
+        <a href="https://www.instagram.com/morphic_world_power?igshid=OGQ5ZDc2ODk2ZA%3D%3D&fbclid=IwY2xjawEpf7lleHRuA2FlbQIxMAABHf_4d7xtpQnv3irqVPRVCJzUK1jYCNiSRJjbUwrxe55oqCaX4OpmWncvBA_aem_YOwN7qn-RwI2k5VOJAE_HQ" target="_blank" class="icon-link"><i class="fab fa-instagram"></i></a>
+        <a href="mailto:eileenthomson@gmail.com" class="icon-link"><i class="fas fa-envelope"></i></a>
+        <a href="tel:000-000-000" class="icon-link"><i class="fas fa-mobile-alt"></i></a>
     </div>
     <footer class="footer">
         <h1 class="copyright">&copy Eileen Thomson | 2024</h1>
