--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
                     <img src="img/Art_1.jpg" alt="Urban Rhythm">
                     <div class="gallery-item-content">
                         <h3>Eternal Flame</h3>
+                        <div class="price-tag">$300</div>
                         <p>Capture the energy of city life with this dynamic piece.</p>
                         <a href="https://morphicfield.thrivecart.com/painting-1/" target="_blank" class="btn">Buy Now <i
                                 class="fas fa-shopping-cart"></i></a>
@@ -75,6 +76,7 @@
                     <img src="img/Art_2.jpg" alt="Nature's Embrace">
                     <div class="gallery-item-content">
                         <h3>Phosphorescent Earth</h3>
+                        <div class="price-tag">$300</div>
                         <p>Bring the outdoors in with this lush, verdant landscape.</p>
                         <a href="https://morphicfield.thrivecart.com/painting-1/" target="_blank" class="btn">Buy Now <i
                                 class="fas fa-shopping-cart"></i></a>
@@ -84,6 +86,7 @@
                     <img src="img/Art_3.jpg" alt="Serene Horizons">
                     <div class="gallery-item-content">
                         <h3>Nature's Dance</h3>
+                        <div class="price-tag">$300</div>
                         <p>A calming seascape that brings tranquility to any room.</p>
                         <a href="https://morphicfield.thrivecart.com/painting-1/" target="_blank" class="btn">Buy Now <i
                                 class="fas fa-shopping-cart"></i></a>
@@ -93,6 +96,7 @@
                     <img src="img/Art_4.jpg" alt="Urban Rhythm">
                     <div class="gallery-item-content">
                         <h3>Celestial Harmony</h3>
+                        <div class="price-tag">$300</div>
                         <p>Capture the energy of city life with this dynamic piece.</p>
                         <a href="https://morphicfield.thrivecart.com/painting-1/" target="_blank" class="btn">Buy Now <i
                                 class="fas fa-shopping-cart"></i></a>
