--- a/index.html
+++ b/index.html
@@ -55,12 +55,13 @@
                             src="img/Art_4.jpg" alt="Artwork sample 4" class="collage-item"></a>
                 </div>
             </div>
-        </section>
-        <h1>Paintings Gallery</h1>
-        <p id="gallery"></p>
+        </section >
+
+        <p ></p>
         <div class="gallery-wrapper">
             <button class="gallery-nav prev"><i class="fas fa-chevron-left"></i></button>
-            <section class="gallery">
+            <section id="gallery" class="gallery">
+                <h1 >Paintings Gallery</h1>
                 <div class="gallery-container">
                 <div class="gallery-item">
                     <img src="img/Art_1.jpg" alt="Urban Rhythm">
