--- a/index.html
+++ b/index.html
@@ -56,11 +56,11 @@
                 </div>
             </div>
         </section >
-
-        <p ></p>
+        <section id="gallery">
         <div class="gallery-wrapper">
             <button class="gallery-nav prev"><i class="fas fa-chevron-left"></i></button>
-            <section id="gallery" class="gallery">
+            <section  class="gallery">
+                <p ></p>
                 <h1 >Paintings Gallery</h1>
                 <div class="gallery-container">
                 <div class="gallery-item">
@@ -107,6 +107,7 @@
         </section>
         <button class="gallery-nav next"><i class="fas fa-chevron-right"></i></button>
     </div>
+</section>
 
         <section id="contact">
             <h2>Get in Touch</h2>
